--- a/Resources/en.lproj/Neeman.strings
+++ b/Resources/en.lproj/Neeman.strings
@@ -10,3 +10,6 @@
 "NetworkError_NotReachedServer" = "We couldn't reach the server, please try again later.";
 /* Error description */
 "NetworkError_Unknown" = "An unknown error occured with the network. Please try again or try connecting to the internet through another network.";
+
+"Button-Cancel"="Cancel";
+"Button-OK"="OK";
